
Bug fixes:
  - fix rollback function generation for cases when a table name includes an 
    antislash character.
  - fix emaj_snap_group for cases when any column from the pkey contains at 
    least one special character that obliged to quote the column name in 
    queries.
  - in emaj_snap_group() and emaj_snap_log_group() functions, verify that the 
    supplied directory parameter is not null.  

0.10.1
------
Enhancements:
  - enhance emaj_snap_group() function so that it can be used by emaj_adm 
    granted role. The use of the function is also recorded into the emaj_hist 
    table. The files are now created in CSV format.
  - create a new emaj_snap_log_group() function to snap all log tables 
    related to a group into a supplied directory. Only rows corresponding 
    to a mark interval are snapped. One CSV file is created for each table. 
    Sequences state at starting mark and ending mark are also stored into 
    2 specific files.
  - the emaj_verify_all() function also performs various checks on all tables 
    groups to verify their consistency and ability to be safely managed by 
    E-Maj functions.
  - add a primary key (and its associated index) to log tables to speed up 
    the rollback operations or detailed statistics requests on large log 
    tables.

Bug fixes: 
  - fix emaj_delete_mark_group() and emaj_delete_before_mark_group() 
    operations. When a mark set for several groups by an 
    emaj_set_mark_groups() function, is deleted for a single group, it was 
    not usable anymore (in particular for rollback) for the other groups 
    for which the mark remained active.
  - fix errors when using schema, column, sequence or mark names including 
    unusual characters like apostrophs or commas.
  - fix a possible "division by zero" error in 
    emaj_estimate_rollback_duration() function.
  - fix a bug in emaj_snap_group() function in building the list of the 